correction in grid-property for alignment in class dashboard

--- a/src/app/client/src/app/staff/components/dashboard/_dashboard-card.scss
+++ b/src/app/client/src/app/staff/components/dashboard/_dashboard-card.scss
@@ -51,7 +51,7 @@
       }
 
       .divider {
-        margin: 0.5rem 0;
+        margin: 0.25rem 0;
         border-bottom: calculateRem(1px) solid #848484;
       }
     }
@@ -180,7 +180,7 @@
           }
 
           .divider {
-            margin: 0.5rem 0;
+            margin: 0.25rem 0;
             border-bottom: calculateRem(1px) solid #848484;
             width: auto;
           }
